crates/bevy_naga_oil/src/compose/tests/invalid_identifiers/global.wgsl
#define_import_path globals

var<private> fine: f32 = 1.0;
var<private> bad_: f32 = 1.0;